--- a/sniffersapp/static/css/james.css
+++ b/sniffersapp/static/css/james.css
@@ -1,4 +1,6 @@
-
+body {
+    overflow: scroll;
+}
 
 .select2-container--default .select2-selection--single {
     height: 35px !important;
@@ -117,7 +119,7 @@
 
 /* DataTable */
 .next, .previous {
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .dataTables_filter .form-control {
@@ -167,8 +169,9 @@ div.dataTables_wrapper div.dataTables_info {
 }
 
 .ibox-content-65vh {
+    overflow:auto ;
     border-style: none;
-    min-height: 65vh;
+    min-height: 100%;
 }
 
 /* Nav Tabs */
@@ -424,8 +427,7 @@ height: 100px;
 
 .weekly_timesheet_sum_heading{
     border: 0px !important;
-    background-color: #1ab394 !important;
-    color: #FFFFFF !important;
+    color: #676a6c !important;
     min-height: 40px !important;
     padding-bottom: 0px !important;
     padding-top: 18px !important;
@@ -450,7 +452,6 @@ height: 100px;
     font-size: 13px;
     text-align: left !important;
     margin-bottom: 20px;
-    width: 200px;
     height: 35px;
 }
 
@@ -468,6 +469,26 @@ height: 100px;
     margin-bottom: 5px !important;
 }
 
+
+.timesheet_date_select {
+    font-size: 13px;
+    text-align: left !important;
+    margin-bottom: 20px;
+    height: 35px;
+    background-color: #FFFFFF;
+    background-image: none;
+    border: 1px solid #e5e6e7;
+    border-radius: 1px;
+    color: inherit;
+    display: block;
+    padding: 6px 12px;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    width: 100%;
+}
+
+.timesheet_date_select:focus, input:focus {
+    outline-color: #1ab394 !important;
+}
 
 .clockpicker-popover {
     z-index: 999999;
